fixed spacing on mobile

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -3,17 +3,20 @@
 .h1align {
   background-color: white;
   flex-direction: row;
+  align-items: center;
   text-align: center;
   overflow: hidden;
 
   @include mobile{
     flex-direction: column;
     align-items: center;
+    padding-bottom: 150px;
   }
 
   h1 {
     margin-top: 50px;
     font-size: 50px;
+    margin-bottom: 10px;
 
     @include mobile{
       font-size: 30px;
@@ -50,14 +53,15 @@
       flex: 0.5;
       float: left;
       //position: relative;
-  
+
       .wrapper {
         width: 100%;
         height: 100%;
-        padding-right: 50px;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-self: center;
+        align-items: center;
   
         @include mobile{
           padding-left: 0;
@@ -66,8 +70,13 @@
         }
   
         p {
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
           font-size: 18px;
-          margin: 10px 0;
+          //margin: 10px 0;
+          width: 60%;
+          text-align: center;
 
           @include mobile{
               font-size: 16px;
@@ -106,14 +115,21 @@
       position: relative;
       overflow: hidden;
   
+      @include mobile {
+        width: 100%;
+      }
+
       .imgContainer {
           display: flex;
+          flex-direction: column;
           align-items: center;
           justify-content: center;
-          height: 700px;
+          height: 500px;
   
           @include mobile{
-              align-items: flex-start;
+              margin-top: 10px;
+              justify-content: flex-start;
+              padding-bottom: 100px;
           }
   
           img {
